# pgm

./: CMakeLists.txt  README.md
src/: Pgm.cpp  Pgm.h  main.cpp
